--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="campus-col">
-          <img src="/covImgAirbus.jpg" alt="image">
+          <img src="covImgAirbus.jpg" alt="image">
           <div class="layer">
             <h3 class="layer">AIRBUS</h3>
           </div>
